samples/_failures_safe/1761599659_240a01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b920838e.c: In function ‘bfs’:
./samples/SAFE/__tmp_b920838e.c:170:5: error: expected expression at end of input
  170 |     if (!
      |     ^~
./samples/SAFE/__tmp_b920838e.c:170:5: error: expected declaration or statement at end of input
